spring-cloud-kubernetes-parent/ingress-springcloudkubernetes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springcloudkubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Forwarded-Proto, X-Forwarded-Port, X-Forwarded-Prefix"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: local-springcloudkubernetes.com
    http:
      paths:
      - path: /blogs/?(.+)
        backend:
          serviceName: blog-service
          #points to port attribute of service
          servicePort: 80
      - path: /posts/?(.+)
       #points to port attribute of service
        backend:
           # Service name and port from oauth_server_deployment.yaml
          serviceName: post-service
          servicePort: 80
